# Consolix

./: .gitignore  .gitmodules  AGENTS.md  AppComponentManager_8hpp.html  AppComponentManager_8hpp.js  AppComponentManager_8hpp_source.html  BaseLoopComponent_8hpp.html  BaseLoopComponent_8hpp.js  BaseLoopComponent_8hpp_source.html  CMakeLists.txt  CliComponent_8hpp.html  CliComponent_8hpp.js  CliComponent_8hpp_source.html  ColorManipulator_8hpp.html  ColorManipulator_8hpp.js  ColorManipulator_8hpp_source.html  ConfigComponent_8hpp.html  ConfigComponent_8hpp.js  ConfigComponent_8hpp_source.html  ConsoleApplication_8hpp.html  ConsoleApplication_8hpp.js  ConsoleApplication_8hpp_source.html  Doxyfile  EventHubComponent_8hpp.html  EventHubComponent_8hpp.js  EventHubComponent_8hpp_source.html  Example-example.html  IAppComponent_8hpp.html  IAppComponent_8hpp.js  IAppComponent_8hpp_source.html  IShutdownable_8hpp.html  IShutdownable_8hpp.js  IShutdownable_8hpp_source.html  LoggerComponent_8hpp.html  LoggerComponent_8hpp.js  LoggerComponent_8hpp_source.html  LogoComponent_8hpp.html  LogoComponent_8hpp.js  LogoComponent_8hpp_source.html  LoopComponent_8hpp.html  (+196 more)
.github/workflows/: ci.yml  odr_tests.yml  publish.yaml
agents/: header-implementation-guidelines-RU.md  header-implementation-guidelines.md
docs/: color_utils.dox  common_types.dox  examples.dox  header-implementation-guidelines-RU.md  header-implementation-guidelines.md  json_utils.dox  logo-1280x640.pdn  logo-640x320.pdn  mainpage.dox  path_utils.dox  project_structure.dox  setup.dox
docs/audits/: 2026-03-17-build-odr-audit.md
examples/: CMakeLists.txt  config.json  example_application_main_loop.cpp  example_exit_code_runner.cpp  example_loop_throttle_component.cpp  example_shutdown_and_resources.cpp  example_stderr_diagnostics.cpp  show_all_colors.cpp
guides/: header-implementation-guidelines-RU.md  header-implementation-guidelines.md
include/consolix/: components.hpp  config_macros.hpp  consolix.hpp  core.hpp  interfaces.hpp  utils.hpp
include/consolix/components/: BaseLoopComponent.hpp  CliComponent.hpp  ConfigComponent.hpp  EventHubComponent.hpp  LoggerComponent.hpp  LogoComponent.hpp  LoopComponent.hpp  LoopThrottleComponent.hpp  ModuleHubComponent.hpp  PosixSignalWakeComponent.hpp  TitleComponent.hpp
include/consolix/components/LoggerComponent/: MultiStream.hpp
include/consolix/core/: AppComponentManager.hpp  ConsoleApplication.hpp  ConsoleApplicationRunner.hpp  LoopWakeService.hpp  PosixSignalWakeService.hpp  ServiceLocator.hpp  application_utils.hpp  platform_includes.hpp  service_utils.hpp  std_compat.hpp
include/consolix/interfaces/: IAppComponent.hpp  IShutdownable.hpp
include/consolix/utils/: ColorManipulator.hpp  encoding_utils.hpp  enums.hpp  json_utils.hpp  path_utils.hpp  system_utils.hpp  types.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+66 more)
tests/: CMakeLists.txt  test_app_component_manager_shutdown_order.cpp  test_console_application_runner.cpp  test_event_hub_component.cpp  test_log_stream_macros.cpp  test_loop_throttle_component.cpp  test_module_hub_component.cpp  test_output_no_whitespace_no_newlines.json  test_output_whitespace_no_newlines.json  test_output_whitespace_preserve_newlines.json  test_posix_signal_shutdown.cpp  test_stderr_diagnostics.cpp  test_strip_json_comments.cpp
tests/odr/: console_app_a.cpp  console_app_b.cpp  console_app_main.cpp  console_app_main_static.cpp  consolix_static_library.cpp  s_locator_a.cpp  s_locator_b.cpp  s_locator_main.cpp  s_locator_main_static.cpp
tools/: audit_consolix.ps1
